add plugin in parent pom